package behavioral.observer.ca2;

public interface ButtonClickListener {
    void onClick(int clickCount);
}
